fixed navigation on palm and few other spacing tweaks

--- a/_src/sass_imports/_nav.scss
+++ b/_src/sass_imports/_nav.scss
@@ -3,9 +3,9 @@
 
 	position: absolute;
 	top: 10px;
-	right: 10px;
+	right: 0;
 
-	margin: 0;
+	margin: 0 10px;
 	padding: 0;
 
 	z-index: 1;
@@ -24,13 +24,19 @@
 
 	@media (max-width: 600px) {
 
+		// Show and hide when toggled
    		display:  none;
+
    		.nav-open & {
    			display: block;
    		}
 
-		position: initial;
+		position: absolute;
+		top: 40px; // Clear the toggle
+
+		// Make full width
 		width: 100%;
+		margin: 0;
 
    		li {
    			display: block;
@@ -61,6 +67,5 @@
 	@media (max-width: 600px) {
 
    		display: block;
-
 	}
 }
